fonctionalite base de donnees

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="notification_channel_id">myCanal</string>
     <string name="notification_channel_title">myTitle</string>
     <string name="notification_channel_desc">This is a test canal</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 
 </resources>
